--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
                                     <i class="fas fa-envelope"></i>
                                     <div>
                                         <h4>Email Me</h4>
-                                        <p><a href="mailto:rahulvermaa221@gmail.com">rahulvermaa221@gmail.com</a></p>
+                                        <p><a href="mailto:rahulverma67672@gmail.com">rahulverma67672@gmail.com</a></p>
                                     </div>
                                 </div>
                                 <div class="info-item">
