--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Verma - Web Developer Portfolio</title>
 
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6884c127bce38c192882cae2/1j139527l';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
     <!-- Preload critical resources -->
     <link rel="preload" href="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d" as="image">
     <link rel="preload" href="https://plus.unsplash.com/premium_photo-1674059550127-91a5aa9d1195" as="image">
