--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,9 @@ s0.parentNode.insertBefore(s1,s0);
                             <p>Interactive web app for streamlined operations</p>
                         </div>
                     </div>
+
+<iframe frameborder="0" src="https://itch.io/embed/3861676?bg_color=fafbf8" width="552" height="167"><a href="https://rahulverma67.itch.io/3drubikscube">3D Rubik’s Cube Puzzle Game – Brain Teaser &amp; Cube Solver by rahulverma67</a></iframe>
+                    
                 </div>
             </div>
         </section>
@@ -1695,3 +1698,4 @@ s0.parentNode.insertBefore(s1,s0);
 </body>
 
 </html>
+
