--- a/index.html
+++ b/index.html
@@ -1152,8 +1152,11 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                     </div>
 
-<iframe frameborder="0" src="https://itch.io/embed/3861676?bg_color=fafbf8" width="552" height="167"><a href="https://rahulverma67.itch.io/3drubikscube">3D Rubik’s Cube Puzzle Game – Brain Teaser &amp; Cube Solver by rahulverma67</a></iframe>
-                    
+ <!--
+    <iframe frameborder="0" src="https://itch.io/embed/3861676?bg_color=fafbf8" width="552" height="167">
+    <a href="https://rahulverma67.itch.io/3drubikscube">3D Rubik’s Cube Puzzle Game – Brain Teaser &amp; Cube Solver by rahulverma67</a>
+                </iframe> 
+                    -->                    
                 </div>
             </div>
         </section>
@@ -1698,4 +1701,5 @@ s0.parentNode.insertBefore(s1,s0);
 </body>
 
 </html>
+
 
